--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.3.4
+@version        2.3.5
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @preprocessor stylus
@@ -2401,9 +2401,26 @@ if themep == classic {
 	.st-button.kinetic {
 		box-shadow: none !important;
 	}
-	span.ptbr-score {
+	button.ptbr-score.ptbr-score {
 		background-color: var(--bg) !important;
 		box-shadow:none !important;
+		border-color: var(--bg-300) !important;
+	}
+	.ptbr-breakdown {
+		background: var(--bg) !important;
+		& > span:first-child {
+			color: var(--favorite-button) !important;
+		}
+		& span:last-child {
+			color: var(--remove-favorite) !important;
+		}
+		&::after {
+			border-color: var(--bg) transparent transparent transparent !important;
+			translate: -50% -1px !important;
+		}
+	}
+	.ptbr-etc-menu {
+		background: var(--bg-400) !important;
 	}
 	.button.score-neutral, .st-button {
 		background-color: var(--bg)!important;
