Fixed - Re621 dialogue close icon

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.3.8
+@version        2.3.9
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @preprocessor stylus
@@ -1863,6 +1863,14 @@ if themep == classic {
 		color: var(--base-text) !important;
 	}
 	button.ui-dialog-titlebar-close {
+		& span.ui-button-icon.ui-icon.ui-icon-closethick::before {
+			color: var(--base-text) !important;
+		}
+		&:hover span.ui-button-icon.ui-icon.ui-icon-closethick::before {
+			color: var(--base-text-faded) !important;
+		}
+	}
+	/*button.ui-dialog-titlebar-close {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: 1fr;
@@ -1876,7 +1884,7 @@ if themep == classic {
 		& span:nth-child(2) {
 			display:none !important;
 		}
-	}
+	}*/
 	div.re621-ui-dialog a.delete-link {
 		background-color: var(--mode-remove-fav) !important;
 	}
